--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="مستقيم هو تطبيق مصمم للاستماع إلى القرآن الكريم. استمتع بتجربة استماع مذهلة مع خيارات تخصيص متعددة."
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Kufam:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet"
     />
-    <title>مستقيم</title>
+    <title>مستقيم | Mostaqem - التطبيق الأمثل للاستماع إلى القرآن الكريم</title>
   </head>
   <body>
     <div id="root"></div>
