add meta google search to head

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       content="مستقيم هو تطبيق مصمم للاستماع إلى القرآن الكريم. استمتع بتجربة استماع مذهلة مع خيارات تخصيص متعددة."
     />
     <meta name="robots" content="index, follow" />
+    <meta
+      name="google-site-verification"
+      content="N97BiMo_Z71TiP9ySqmG9CC_9cBNKbZMdSoi_gX3B24"
+    />
     <link rel="icon" type="image/png" href="/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
